# TaskTracking-FastAPI-Vue

./: .gitignore  README.md  commands.md
.github/workflows/: api.yml  destroy.yml  infrastructure.yml  ui.yml
infrastructure/: cf_tasks.yml
services/tasks_api/: .flake8  config.py  create_dynamodb_locally.py  delete_dynomo_db_locally.py  docker-compose.yml  format_code.sh  helpers.py  main.py  models.py  package.json  pyproject.toml  schemas.py  serverless.yml  setup_env.py  store.py  tests.py
services/tasks_api/infrastructure/: test_data_clear_dynomodb.py  test_data_initialize_dynomodb.py  validate_test_parametr.py
services/tasks_api/resources/: cognito.yml  dynamodb.yml
services/tasks_ui/: .gitignore  index.html  package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js  main.js
